// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextGroup mount render correctly 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  text-align: justify;
}

.c0 > * {
  display: inline;
  margin-right: 0.4rem;
}

<TextGroup
  align="justify"
  inline={true}
>
  <styled.div
    align="justify"
    inline={true}
  >
    <div
      className="c0"
    >
      <Texts>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my first text. This is my first text. This is my first text. This is my first text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my second text. This is my second text. This is my second text. This is my second text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my third text. This is my third text. This is my third text. This is my third text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my fourth text. This is my fourth text. This is my fourth text. This is my fourth text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my fifth text. This is my fifth text. This is my fifth text. This is my fifth text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my sixth text. This is my sixth text. This is my sixth text. This is my sixth text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my seventh text. This is my seventh text. This is my seventh text. This is my seventh text.
            </span>
          </styled.span>
        </Text>
      </Texts>
    </div>
  </styled.div>
</TextGroup>
`;

exports[`TextGroup mount render correctly with align 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  text-align: right;
}

.c0 > * {
  display: inline;
  margin-right: 0.4rem;
}

<TextGroup
  align="right"
  inline={true}
>
  <styled.div
    align="right"
    inline={true}
  >
    <div
      className="c0"
    >
      <Texts>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my first text. This is my first text. This is my first text. This is my first text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my second text. This is my second text. This is my second text. This is my second text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my third text. This is my third text. This is my third text. This is my third text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my fourth text. This is my fourth text. This is my fourth text. This is my fourth text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my fifth text. This is my fifth text. This is my fifth text. This is my fifth text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my sixth text. This is my sixth text. This is my sixth text. This is my sixth text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my seventh text. This is my seventh text. This is my seventh text. This is my seventh text.
            </span>
          </styled.span>
        </Text>
      </Texts>
    </div>
  </styled.div>
</TextGroup>
`;

exports[`TextGroup mount render correctly with inline 1`] = `
.c1 {
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  text-transform: none;
  font-style: normal;
  color: #545456;
  opacity: 1;
}

.c0 {
  text-align: justify;
}

.c0 > * {
  display: block;
  margin-right: 0;
}

<TextGroup
  align="justify"
  inline={false}
>
  <styled.div
    align="justify"
    inline={false}
  >
    <div
      className="c0"
    >
      <Texts>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my first text. This is my first text. This is my first text. This is my first text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my second text. This is my second text. This is my second text. This is my second text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my third text. This is my third text. This is my third text. This is my third text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my fourth text. This is my fourth text. This is my fourth text. This is my fourth text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my fifth text. This is my fifth text. This is my fifth text. This is my fifth text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my sixth text. This is my sixth text. This is my sixth text. This is my sixth text.
            </span>
          </styled.span>
        </Text>
        <Text
          capitalize={false}
          italic={false}
          opacity={1}
          size="1rem"
          uppercase={false}
          weight={400}
        >
          <styled.span
            capitalize={false}
            italic={false}
            opacity={1}
            size="1rem"
            uppercase={false}
            weight={400}
          >
            <span
              className="c1"
              opacity={1}
              size="1rem"
            >
              This is my seventh text. This is my seventh text. This is my seventh text. This is my seventh text.
            </span>
          </styled.span>
        </Text>
      </Texts>
    </div>
  </styled.div>
</TextGroup>
`;
